--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Staatliches', cursive;
     }
     
-    input[type=text] {
+    input {
       box-sizing: border-box;
       font-size: 21px;
       width: 130px;
